Fixing long press paste pop up bug

Long pressing on an empty editable input didn't trigger a paste
popup menu. This change fixes that.

BUG=614557

Review-Url: https://codereview.chromium.org/2007213002
Cr-Commit-Position: refs/heads/master@{#395789}

Former-commit-id: 57fb476d4be50c4d0690036bf6dc0f7ffc386fbb